Showing created menu into home.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Index.cshtml
@@ -8,7 +8,7 @@
 <h1> @NccInfo.Name Settings </h1>
 
 <div class="row">
-    <form class="form-horizontal" asp-controller="Settings" asp-action="Index" method="post">
+    <form class="form-horizontal" asp-controller="Admin" asp-action="Index" method="post">
         <span asp-validation-summary="ValidationSummary.All" class="text-danger"></span>
         <input type="hidden" class="form-control" id="Id" name="Id" asp-for="Id" >
         <div class="form-group">
